Changes in version 0.8-0 (??-??-2012, Rev. 1???)
================================================

- Fixed: If edges or nodes were changed with a double click,
  after that an error dialog was shown although nothing was wrong. 

- You can select more than one node or edge and move them around.

- New class for entangled graphs (graphs with memory, i.e. linear convex 
  combinations of graphs with the same nodes).

- Experimental (and mostly undocumented) feature that can be activated
  in the options: Entangled graphs (graphs with memory, i.e. linear convex 
  combinations of graphs with the same nodes).

- Better error messages when input doesn't meet demands

- Improved: Power simulations for singular correlation matrices.

Planed for this release are:

- Support for sub-families of hypotheses.

- Annotation features.

- Improved logging and bug reporting (showing less but more relevant information).
  
- Improved documentation and user guidance.

Changes in version 0.7-12 (02-08-2012, Rev. 1420)
================================================

- Fixed: Sequentially rejective test procedures could not be reproduced 
  step-by-step in the GUI - although the shown result was correct.

- gMCP 0.7-11 relied on function regmatches that was introduced in R 2.14. 
  Therefore the GUI did not work for R 2.13 and previous versions.
  This is fixed now and gMCP is again compatible with older R versions
  including R 2.8.0.
  
- Removed error messages (that could be safely ignored) in the R console 
  when graphs with variables were shown in the GUI.

 24 files changed, 439 insertions(+), 60 deletions(-)

 
Changes in version 0.7-11 (21-07-2012, Rev. 1404)
================================================

- GUI shows R code to reproduce results in R.

- The graph area has now a pop-up menu on right click.

- Fixed a bug introduced in the last versions:
  In the GUI the alpha-Field was always set back to 0.05 regardless 
  of what the user entered.
